Nutrivida fim de noite

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -88,9 +88,11 @@ sonata_media:
                 - sonata.media.provider.image
 
             formats:
-                small:  { width: 100, quality: 70}
-                big:    { width: 500, quality: 70}
-                banner: { width: 1400, quality: 90}
+                small:          { width: 100, quality: 70}
+                big:            { width: 500, quality: 70}
+                produto:        { width: 260, height: 330, quality: 70}
+                produto_banner: { width: 558, quality: 70}
+                banner:         { width: 1400, quality: 90}
 
     cdn:
         server:
